grammar.js
    source_file: $ => choice(repeat(seq($._definition, optional(';'))), $._expression),

    // For debugging purposes
    //source_file: $ => $._expression,
    //source_file: $ => repeat(seq($._definition, optional(';'))),

    _definition: $ => choice(
      $.altstep,
      $.altstep_type,
      $.class_type,
      $.component_type,
      $.configuration,
      $.const_decl,
      $.constructor,
      $.control,
      $.enumerated_type,
      $.external_function,
      $.friend,
      $.func,
      $.function_type,
      $.group,
      $.import_definition,
      $.map_type,
      $.mode_definition,
      $.module,
      $.module_parameter,
      $.port_type,
      $.record_of_type,
      $.record_type,
      $.set_of_type,
      $.set_type,
      $.signature,
      $.subtype,
      $.template,
      $.testcase,
      $.testcase_type,
      $.union_type,
      $.var_decl,
      $.timer_decl,
      $.port_decl,
    ),

    module: $ => seq(
      'module',
      $._parameterized_name,
      field('language_spec', optional($.language_spec)),
      $._definition_body,
      field('attributes', optional($.attributes)),
    ),

    func: $ => seq(
      field('visibility', optional($.visibility)),
      'function',
      field('modifiers', optional($.template_modifier)),
      $._parameterized_name,
      field('parameters', $.parameters),
      field('extends', optional(seq('extends', $.reference))),
      field('runs_on', optional(seq('runs', 'on', $.reference))),
      field('system', optional(seq('system', $.reference))),
      field('return_type', optional($.return_type)),
      field('body', optional($.block)),
      field('attributes', optional($.attributes)),
    ),

    testcase: $ => seq(
      field('visibility', optional($.visibility)),
      'testcase',
      $._parameterized_name,
      field('parameters', $.parameters),
      optional(choice(
        field('execute_on', seq('execute', 'on', $.reference)),
        field('runs_on', seq('runs', 'on', $.reference, optional(seq('system', $.reference)))),
      )),
      field('body', optional($.block)),
      field('attributes', optional($.attributes)),
    ),

    configuration: $ => seq(
      field('visibility', optional($.visibility)),
      'configuration',
      $._parameterized_name,
      field('parameters', $.parameters),
      field('runs_on', seq('runs', 'on', $.reference, optional(seq('system', $.reference)))),
      field('body', optional($.block)),
      field('attributes', optional($.attributes)),
    ),

    function_type: $ => seq(
      field('visibility', optional($.visibility)),
      'type', 'function',
      $._parameterized_name,
      field('parameters', $.parameters),
      field('extends', optional(seq('extends', $.reference))),
      field('runs_on', optional(seq('runs', 'on', $.reference))),
      field('mtc', optional(seq('mtc', $.reference))),
      field('system', optional(seq('system', $.reference))),
      field('return_type', optional($.return_type)),
      field('attributes', optional($.attributes)),
    ),

    class_type: $ => seq(
      field('visibility', optional($.visibility)),
      'type',
      field('external', optional('external')),
      'class',
      field('modifiers', optional($.modifiers)),
      $._parameterized_name,
      field('super_class', optional(seq('extends', $.references))),
      field('runs_on', optional(seq('runs', 'on', $.reference))),
      field('mtc', optional(seq('mtc', $.reference))),
      field('system', optional(seq('system', $.reference))),
      $._definition_body,
      field('destructor', optional(seq('finally', $.block))),
      field('attributes', optional($.attributes)),
    ),

    component_type: $ => seq(
      field('visibility', optional($.visibility)),
      'type', 'component',
      $._parameterized_name,
      field('extends', optional(seq('extends', $.references))),
      field('body', optional($.block)),
      field('attributes', optional($.attributes)),
    ),

    var_decl: $ => seq(
      field('visibility', optional($.visibility)),
      'var',
      field('template_restriction', optional($.nested_template)),
      field('type', optional($.nested_type)),
      field('declarators', sepBy1(',', $.declarator)),
      field('attributes', optional($.attributes)),
    ),

    timer_decl: $ => seq(
      field('visibility', optional($.visibility)),
      field('type', alias('timer', $.reference)),
      field('declarators', sepBy1(',', $.declarator)),
      field('attributes', optional($.attributes)),
    ),

    port_decl: $ => seq(
      field('visibility', optional($.visibility)),
      'port',
      field('type', $.nested_type),
      field('declarators', sepBy1(',', $.declarator)),
      field('attributes', optional($.attributes)),
    ),

    port_type: $ => seq(
      field('visibility', optional($.visibility)),
      'type', 'port',
      $._parameterized_name,
      field('map_to', optional(seq('map', 'to', $.references))),
      field('connect_to', optional(seq('connect', 'to', $.references))),
      field('kind', choice('procedure', 'message', 'stream', 'mixed')),
      field('realtime', optional('realtime')),
      field('port_attributes', optional($.port_attributes)),
      field('attributes', optional($.attributes)),
    ),

    const_decl: $ => seq(
      field('visibility', optional($.visibility)),
      'const',
      field('template_restriction', optional($.nested_template)),
      field('type', optional($.nested_type)),
      field('declarators', sepBy1(',', $.declarator)),
      field('attributes', optional($.attributes)),
    ),

    mode_definition: $ => seq(
      field('visibility', optional($.visibility)),
      'mode',
      $._parameterized_name,
      field('parameters', optional($.parameters)),
      field('runs_on', optional(seq('runs', 'on', $.reference))),
      '{',
      // TODO: Mode Spec
      '}',
      field('attributes', optional($.attributes)),
    ),

    _expression: $ => choice(
      $.or_expression,
      $.xor_expression,
      $.and_expression,
      $.not_expression,
      $.equal_expression,
      $.rel_expression,
      $.shift_expression,
      $.bit_or_expression,
      $.bit_xor_expression,
      $.bit_and_expression,
      $.bit_not_expression,
      $.add_expression,
      $.mul_expression,
      $.unary_expression,
      $.primary,
    ),

    equal_expression: $ => prec.left(PREC.equality, seq(
      field('left', $._expression),
      field('operator', choice('==', '!=')),
      field('right', $._expression),
    )),

    unary_expression: $ => prec.right(PREC.unary, seq(
      field('operator', choice('+', '-', '!', '++', '--')),
      field('operand', $._expression),
    )),

    // Minus placeholder (spec A.1.5 / B.1.4): bare `-` is a complete
    // expression for uninitialized field/const/modulepar defaults. The
    // `prec(146, ...)` (one above PREC.unary) prevents a phantom
    // `unary_expression('-', <missing operand>)` from being chosen.
    primary: $ => choice(
      'null',
      'omit',
      prec(146, '-'),
      $.boolean_literal,
      $.verdict_literal,
      $.number,
      $.reserved_number,
      $.charstring,
      $.bitstring,
      $.hexstring,
      $.octetstring,
      $.template_values,
      $.composite_literal,
      $.compound_value,
      $.function_literal,
      $.inline_template,
      alias('testcase', $._identifier),
      $.decoded_field_reference,
      $.parenthesized_expression,
      $.presence_check,
      $.predefined_func_call,
      $.reference,
    ),

    // ConstantExpression (Annex A.534): a stricter form of Expression
    // used in type lists, enum values, modulepars, and other contexts
    // where function calls and mutable variable references are forbidden.
    // The grammar can't enforce this; it produces a distinct AST node so
    // downstream tools can.
    parenthesized_expression: $ => seq('(', $._expression, ')'),

    presence_check: $ => choice(
      seq(field('function', 'ispresent'), '(', field('operand', $._expression), ')'),
      seq(field('function', 'isbound'),   '(', field('operand', $._expression), ')'),
      seq(field('function', 'isvalue'),  '(', field('operand', $._expression), ')'),
      seq(field('function', 'ischosen'), '(', field('operand', $._expression), ',', field('variant', $._identifier), ')'),
    ),

    composite_literal: $ => seq(
      '{', sepBy1(',', $._expression), '}',
    ),

    // Compound value (Annex B / A.527): assignment notation `{ field := expr, … }`.
    // Distinct from composite_literal (the list notation `{ expr, … }`).
    compound_value: $ => seq(
      '{',
      sepBy1(',', seq(field('field', $.name), ':=', field('value', $._expression))),
      '}',
    ),

    references: $ => sepBy1(',', $.reference),

    reference: $ => choice(
      $.type_instantiation_expression,
      $.selector_expression,
      $.index_expression,
      $.function_call_expression,
      $._identifier,
      alias('this', $._identifier),
      alias('self', $._identifier),
      alias('???', $._identifier),
      alias(seq('all', 'port'), $._identifier),
      alias(seq('any', 'port'), $._identifier),
      alias(seq('all', 'timer'), $._identifier),
      alias(seq('any', 'timer'), $._identifier),
      alias(seq('all', 'component'), $._identifier),
      alias(seq('any', 'component'), $._identifier),
    ),

    decoded_field_reference: $ => prec(PREC.primary, seq(
      field('operand', $.reference),
      '=>',
      field('type', $.nested_type),
    )),

    // Predefined-function call (Annex C): a dedicated rule that matches
    // any of the ~40 standard function names plus allowing them to be
    // called like a regular function. Keeps the generic `reference`-then-
    // call path for user-defined functions.
    predefined_func_call: $ => prec(PREC.primary, seq(
      field('function', $.predefined_func_name),
      '(',
      field('arguments', sepBy(',', $._expression)),
      ')',
    )),

    predefined_func_name: _ => choice(
      'int2char', 'int2unichar', 'int2bit', 'int2enum', 'int2hex', 'int2oct',
      'bit2int', 'bit2hex', 'bit2oct', 'bit2str',
      'char2int', 'char2oct', 'oct2char', 'oct2bit', 'oct2int', 'oct2hex', 'oct2str',
      'hex2int', 'hex2oct', 'hex2bit', 'hex2str',
      'unichar2int', 'unichar2oct', 'oct2unichar',
      'lengthof', 'sizeof', 'ispresent', 'isbound', 'isvalue', 'ischosen',
      'match', 'valueof', 'decmatch', 'decvalue', 'encvalue', 'present',
      'replace', 'substr', 'regexp', 'str2int', 'float2int', 'int2float',
      'testcasename', 'hostid', 'get_stringencoding',
    ),

    _parameterized_name: $ => seq(
      field('name', $.name),
      field('type_parameters', optional($.type_parameters)),
    ),

    _definition_body: $ => seq(
      '{',
      repeat(seq($._definition, optional(';'))),
      '}',
    ),

    block: $ => seq(
      field('body', $._basic_block),
      field('catches', repeat($.catch_clause)),
      field('finally', optional($.finally_clause)),
    ),

    _basic_block: $ => seq('{', repeat(seq($._statement, optional(';'))), '}'),
    _statement: $ => choice(
      $.block,
      $.reference,
      $.redirection_expr,
      $.assignment,
      $.var_decl,
      $.timer_decl,
      $.port_decl,
      $.const_decl,
      $.template,
      $.label_stmt,
      $.goto_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.return_stmt,
      $.if_stmt,
      $.select_stmt,
      $.select_union_stmt,
      $.select_class_stmt,
      $.select_type_stmt,
      $.for_stmt,
      $.for_range_stmt,
      $.while_stmt,
      $.do_while_stmt,
      $.alt_stmt,
      $.interleave_stmt,
    ),

    _init_stmt: $ => choice(
      $.assignment,
      $.var_decl,
      $.timer_decl,
      $.port_decl,
      $.const_decl,
      $.template,
    ),

    assignment: $ => seq(
      field('left', $.reference),
      ':=',
      field('right', $._expression),
    ),

    return_stmt: $ => seq('return', optional($._expression)),

    if_stmt: $ => seq(
      'if', '(',
      field('init', optional(seq($._init_stmt, ';'))),
      field('condition', $._expression),
      ')',
      field('then', $.block),
      field('else', optional(seq('else', choice($.if_stmt, $.block)))),
    ),

    for_stmt: $ => seq(
      'for', '(',
      field('init', optional($._init_stmt)),
      ';',
      field('condition', optional($._expression)),
      ';',
      field('post', optional($._statement)),
      ')',
      field('body', $.block),
    ),

    select_stmt: $ => seq(
      'select', '(',
      field('init', optional(seq($._init_stmt, ';'))),
      field('expression', $._expression),
      ')',
      field('clauses', repeat1($.select_clause)),
    ),

    select_clause: $ => choice(
      $.select_case_clause,
      $.select_else_clause,
    ),

    select_case_clause: $ => seq(
      'case', '(',
      field('expression', $._expression),
      ')',
      field('body', $.block),
    ),

    select_else_clause: $ => seq(
      'case', 'else',
      field('body', $.block),
    ),

    nested_type: $ => $.reference,

    port_attributes: $ => seq(
      '{',
      repeat(seq($._port_attribute, optional(';'))),
      '}',
    ),

    declarator: $ => seq(
      $._parameterized_name,
      field('value', optional(seq(':=', $._expression))),
    ),

    _port_attribute: $ => choice(
      $.var_decl,
      $.const_decl,
      $.port_address,
      $.port_map_param,
      $.port_unmap_param,
      $.port_message_types,
    ),

    port_message_types: $ => seq(
      field('direction', choice('in', 'out', 'inout')),
      field('messages', sepBy1(',', $._port_translatation_spec)),
    ),

    _port_translatation_spec: $ => seq(
      field('type', $.reference),
      field('translate', optional(seq(
        field('direction', choice('from', 'to')),
        field('outer_type', $.reference),
        'with',
        field('translator', $.reference),
        '(', ')',))),
    ),

    attributes: $ => seq(
      'with', '{', repeat(seq($.attribute, optional(';'))), '}'
    ),

    parameters: $ => seq(
      '(',
      sepBy(',', $.parameter),
      ')'
    ),

    parameter: $ => seq(
      field('direction', optional(choice('in', 'out', 'inout'))),
      field('template_restriction', optional($.nested_template)),
      field('type', $.nested_type),
      field('name', $.name),
      field('array_def', optional($.array_def)),
      field('variadic', optional('...')),
      field('default', optional(seq(':=', $._expression))),
    ),

    return_type: $ => seq(
      'return',
      field('template_restriction', optional($.nested_template)),
      field('type', $.nested_type),  // NOTE: Nested types support ArrayDef due to index_expression in reference
    ),

    modifiers: $ => repeat1($.modifier),

    // Template/function modifier chain per spec §15: [ @fuzzy ] [ @deterministic ] [ @abstract ] in order.
    // Kept as a choice (not a seq of optionals) because tree-sitter rejects rules that match the empty string.
    // Generic `modifiers` is kept for other contexts where order doesn't matter.
    name: $ => $._identifier,

    visibility: _ => choice('public', 'private', 'friend'),

    _identifier: _ => /[a-zA-Z_]\w*/,

    modifier: _ => /@\w+/,

    verdict_literal: _ => choice('none', 'pass', 'inconc', 'fail', 'error'),
    number: _ => token(seq(/\d+(\.\d+)?/, optional(/[eE][+-]?[0-9][0-9_]*/),)),

    reserved_number: _ => choice('infinity', 'not_a_number'),

    charstring: _ => /\"(\\.|\"\"|[^\"])*\"/,
