test/corpus/behavior_types.txt
===
Function type
===

private type function f() runs on C return int;

---

(source_file
  (function_type
    (visibility)
    (name)
    (parameters)
    (reference)
    (return_type
      (nested_type
        (reference)))))
