test/corpus/class.txt
===
Simple
===
private type external class @foo C extends A runs on B {} finally { } with { }
---

(source_file
  (class_type
    (visibility)
    (modifiers
      (modifier))
    (name)
    (references
      (reference))
    (reference)
    (block)
    (attributes)))
