test/corpus/configurations.txt
===
Configuration
===

friend configuration C() runs on C system C {} with {}

---

(source_file
  (configuration
    (visibility)
    (name)
    (parameters)
    (reference)
    (reference)
    (block)
    (attributes)))

===
Mode definition with statement body
===
module M {
  mode MyMode() runs on C {
    setverdict(pass);
    log("running");
  }
}
---

(source_file
  (module
    (name)
    (mode_definition
      (name)
      (parameters)
      (reference)
      (setverdict_stmt
        (primary
          (verdict_literal)))
      (log_stmt
        (primary
          (charstring))))))
