test/corpus/literals.txt
===
Integers
===
23
---

(source_file
  (number))

===
Floats
===
123.0
---

(source_file
  (number))

===
Invalid number
:error
===
123abc
---

===
Infinity
===
infinity
---

(source_file
  (reserved_number))

===
Negative infinity
===
-infinity
---

(source_file
  (unary_expression
    (reserved_number)))
